k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integra-portal-service
  namespace: integramanufactureapp
  labels:
    app: integra-portal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: integra-portal
